Fix bug - breadcrumb gets cut off on right side (Zoomable Treemap)

--- a/src/renderer/styles.scss
+++ b/src/renderer/styles.scss
@@ -237,3 +237,7 @@ a {
 .d3DisplayOff {
   display: none;
 }
+
+#trail2 {
+  width: 100%;
+}
